[BE] feat: 기존 `Block Entity` 삭제 및 `Content` -> `Block`으로 변경 (#247)
* refactor: 기존 `Block Entity` 삭제 및 `Content` -> `Block`으로 변경

* refactor: `setter` 제거 -> 생성자에서 `Writing` 주입