@@ -1,16 +1,23 @@
 package org.donggle.backend.domain.parser;
 
+import org.donggle.backend.domain.category.Category;
+import org.donggle.backend.domain.member.Email;
+import org.donggle.backend.domain.member.Member;
+import org.donggle.backend.domain.member.MemberName;
+import org.donggle.backend.domain.member.Password;
 import org.donggle.backend.domain.parser.markdown.MarkDownParser;
 import org.donggle.backend.domain.parser.markdown.MarkDownStyleParser;
 import org.donggle.backend.domain.writing.BlockType;
-import org.donggle.backend.domain.writing.content.CodeBlockContent;
-import org.donggle.backend.domain.writing.content.Content;
+import org.donggle.backend.domain.writing.Title;
+import org.donggle.backend.domain.writing.Writing;
+import org.donggle.backend.domain.writing.content.Block;
+import org.donggle.backend.domain.writing.content.CodeBlock;
 import org.donggle.backend.domain.writing.content.Depth;
+import org.donggle.backend.domain.writing.content.ImageBlock;
 import org.donggle.backend.domain.writing.content.ImageCaption;
-import org.donggle.backend.domain.writing.content.ImageContent;
 import org.donggle.backend.domain.writing.content.ImageUrl;
 import org.donggle.backend.domain.writing.content.Language;
-import org.donggle.backend.domain.writing.content.NormalContent;
+import org.donggle.backend.domain.writing.content.NormalBlock;
 import org.donggle.backend.domain.writing.content.RawText;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -25,10 +32,14 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 
 class MarkDownParserTest {
     private MarkDownParser markDownParser;
+    private Writing writing;
 
     @BeforeEach
     void setUp() {
-        markDownParser = new MarkDownParser(new MarkDownStyleParser());
+        final Member member = new Member(new MemberName("동그리"), new Email("a@a.com"), new Password("1234"));
+        final Category category = Category.basic(member);
+        writing = Writing.lastOf(member, new Title("title"), category);
+        markDownParser = new MarkDownParser(new MarkDownStyleParser(), writing);
     }
 
     @Test
@@ -49,14 +60,14 @@ class MarkDownParserTest {
                 ```
                 """;
 
-        final List<Content> result = List.of(
-                new NormalContent(Depth.empty(), BlockType.PARAGRAPH, RawText.from("###안녕"), Collections.emptyList()),
-                new NormalContent(Depth.empty(), BlockType.PARAGRAPH, RawText.from("  안녕"), Collections.emptyList()),
-                new CodeBlockContent(BlockType.CODE_BLOCK, RawText.from("나는 자바다"), Language.from("java"))
+        final List<Block> result = List.of(
+                new NormalBlock(writing, Depth.empty(), BlockType.PARAGRAPH, RawText.from("###안녕"), Collections.emptyList()),
+                new NormalBlock(writing, Depth.empty(), BlockType.PARAGRAPH, RawText.from("  안녕"), Collections.emptyList()),
+                new CodeBlock(writing, BlockType.CODE_BLOCK, RawText.from("나는 자바다"), Language.from("java"))
         );
 
         //when
-        final List<Content> parse = markDownParser.parse(text);
+        final List<Block> parse = markDownParser.parse(text);
 
         //then
         assertThat(parse).usingRecursiveComparison().ignoringFields("createdAt", "updatedAt").isEqualTo(result);
@@ -67,11 +78,11 @@ class MarkDownParserTest {
     void parserImage() {
         //given
         final String text = "![imageName](www.naver.com)";
-        final ImageContent expected = new ImageContent(BlockType.IMAGE, new ImageUrl("www.naver.com"), new ImageCaption("imageName"));
+        final ImageBlock expected = new ImageBlock(writing, BlockType.IMAGE, new ImageUrl("www.naver.com"), new ImageCaption("imageName"));
 
         //when
-        final List<Content> result = markDownParser.parse(text);
-        final ImageContent resultContent = (ImageContent) result.get(0);
+        final List<Block> result = markDownParser.parse(text);
+        final ImageBlock resultContent = (ImageBlock) result.get(0);
 
         //then
         assertAll(
@@ -89,11 +100,11 @@ class MarkDownParserTest {
         void parseDepth() {
             //given
             final String text = "    - hello world\n        - hubcreator";
-            final NormalContent expected1 = new NormalContent(Depth.from(1), BlockType.UNORDERED_LIST, RawText.from("hello world"), List.of());
-            final NormalContent expected2 = new NormalContent(Depth.from(2), BlockType.UNORDERED_LIST, RawText.from("hubcreator"), List.of());
+            final NormalBlock expected1 = new NormalBlock(writing, Depth.from(1), BlockType.UNORDERED_LIST, RawText.from("hello world"), List.of());
+            final NormalBlock expected2 = new NormalBlock(writing, Depth.from(2), BlockType.UNORDERED_LIST, RawText.from("hubcreator"), List.of());
 
             //when
-            final List<Content> result = markDownParser.parse(text);
+            final List<Block> result = markDownParser.parse(text);
 
             //then
             assertAll(
@@ -107,11 +118,11 @@ class MarkDownParserTest {
         void parseDepth2() {
             //given
             final String text = "\t- hello world\n\t\t - hubcreator";
-            final NormalContent expected1 = new NormalContent(Depth.from(1), BlockType.UNORDERED_LIST, RawText.from("hello world"), List.of());
-            final NormalContent expected2 = new NormalContent(Depth.from(2), BlockType.UNORDERED_LIST, RawText.from("hubcreator"), List.of());
+            final NormalBlock expected1 = new NormalBlock(writing, Depth.from(1), BlockType.UNORDERED_LIST, RawText.from("hello world"), List.of());
+            final NormalBlock expected2 = new NormalBlock(writing, Depth.from(2), BlockType.UNORDERED_LIST, RawText.from("hubcreator"), List.of());
 
             //when
-            final List<Content> result = markDownParser.parse(text);
+            final List<Block> result = markDownParser.parse(text);
 
             //then
             assertAll(
@@ -125,13 +136,13 @@ class MarkDownParserTest {
         void parseDepthWithListMixed() {
             //given
             final String text = "- depth1\n\t- depth2\n    \t- depth3\n    \t    - depth4";
-            final NormalContent expected1 = new NormalContent(Depth.empty(), BlockType.UNORDERED_LIST, RawText.from("depth1"), List.of());
-            final NormalContent expected2 = new NormalContent(Depth.from(1), BlockType.UNORDERED_LIST, RawText.from("depth2"), List.of());
-            final NormalContent expected3 = new NormalContent(Depth.from(2), BlockType.UNORDERED_LIST, RawText.from("depth3"), List.of());
-            final NormalContent expected4 = new NormalContent(Depth.from(3), BlockType.UNORDERED_LIST, RawText.from("depth4"), List.of());
+            final NormalBlock expected1 = new NormalBlock(writing, Depth.empty(), BlockType.UNORDERED_LIST, RawText.from("depth1"), List.of());
+            final NormalBlock expected2 = new NormalBlock(writing, Depth.from(1), BlockType.UNORDERED_LIST, RawText.from("depth2"), List.of());
+            final NormalBlock expected3 = new NormalBlock(writing, Depth.from(2), BlockType.UNORDERED_LIST, RawText.from("depth3"), List.of());
+            final NormalBlock expected4 = new NormalBlock(writing, Depth.from(3), BlockType.UNORDERED_LIST, RawText.from("depth4"), List.of());
 
             //when
-            final List<Content> result = markDownParser.parse(text);
+            final List<Block> result = markDownParser.parse(text);
 
             //then
             assertAll(
@@ -147,11 +158,11 @@ class MarkDownParserTest {
         void parseDepthWithListMixed2() {
             //given
             final String text = "- depth1    hel\tlo\n";
-            final NormalContent expected1 = new NormalContent(Depth.empty(), BlockType.UNORDERED_LIST, RawText.from("depth1    hel\tlo"), List.of());
+            final NormalBlock expected1 = new NormalBlock(writing, Depth.empty(), BlockType.UNORDERED_LIST, RawText.from("depth1    hel\tlo"), List.of());
 
             //when
-            final List<Content> result = markDownParser.parse(text);
-            final NormalContent resultContent = (NormalContent) result.get(0);
+            final List<Block> result = markDownParser.parse(text);
+            final NormalBlock resultContent = (NormalBlock) result.get(0);
 
             //then
             assertAll(
